--- a/style/games_style.css
+++ b/style/games_style.css
@@ -129,6 +129,15 @@
 	font-weight: bold;
 	border: none;
 }
+.ratings div{
+	width: 40px;
+	height: 40px;
+	display: inline-block;
+	background: #e43f3f;
+}
+.ratings-wrapper{
+
+}
 .profile-views{
 	float: right;
 	padding: 0;
@@ -247,4 +256,9 @@
 	.result div:nth-of-type(1){
 		padding-left: 0;
 	}
+	.result div.ratings{
+		padding-left: 15px;
+		padding-right: 7px;
+	}
+
 }
