--- a/style/games_style.css
+++ b/style/games_style.css
@@ -7,6 +7,7 @@
 .top-row ul li{
 	height: 50px;
 	padding-left: 0;
+	margin-bottom: 10px;
 	list-style: none;
 	border-left: 3px solid #1182f5;
 	cursor: pointer;
@@ -74,8 +75,13 @@
 	padding: 20px 0 10px 0;
 	border-bottom: 1px solid #d8d8d8;
 }
+.left-box{
+}
+.right-box{
+
+}
 .game-box-wrapper{
-	padding: 0 0 25px 0;
+
 }
 .game-box-wrapper p{
 	font-style: italic;
@@ -86,7 +92,6 @@
 	width: 20px;
 }
 .game-box{
-	padding-bottom: 15px;
 }
 .game-box-bar{
 	width: 120px;
@@ -112,31 +117,81 @@
 	font-style: italic;
 }
 .versus{
-	padding-bottom: 20px;
+	padding-left: 65px;
 	font-size: 16px;
 	font-weight: bold;
 	font-style: italic;
 }
 .result p{
-	padding-top: 10px;
+	height: 30px;
+	padding-top: 5px;
+	margin-bottom: 5px;
+	padding-left: 0;
 	font-size: 12px;
 	font-style: italic;
 }
+.result p:nth-of-type(2){
+	padding-top: 10px;
+}
 .result input{
-	width: 40px;
-	height: 40px;
+	width: 30px;
+	height: 30px;
 	background: #e43f3f;
 	font-weight: bold;
 	border: none;
 }
+.right-input{
+	padding-left: 57px;
+	padding-right: 0;
+}
+.left-input{
+	margin-left: 7px;
+	padding-left: 7px;
+}
+.ratings{
+	height: 30px;
+	width: 107px;
+	margin: 10px 0;
+}
 .ratings div{
-	width: 40px;
-	height: 40px;
 	display: inline-block;
+}
+.ratings label{
+	cursor: pointer;
+}
+.ratings label input{
+	visibility: hidden;
+	position: absolute;
+}
+.ratings img{
+	width: 30px;
+	height: 30px;
 	background: #e43f3f;
 }
+.ratings-wrapper input{
+	width: 170%;
+	height: 30px;
+	padding-left: 15px;
+	margin-left: 15px;
+	margin-bottom: 10px;
+	background: #e43f3f;
+	color: #fff;
+	font-size: 12px;
+	font-weight: normal;
+	font-style: italic;
+}
 .ratings-wrapper{
-
+	padding: 0;
+}
+.report p{
+	width: 101px;
+	height: 30px;
+	margin-left: 81px;
+	padding-top: 5px;
+	background: #363636;
+	color: #fff;
+	text-align: center;
+	cursor: pointer;
 }
 .profile-views{
 	float: right;
@@ -181,7 +236,38 @@
 .profile-views .online-player img{
 	border: 2px solid #1182f5;
 }
+@media screen and (min-width: 480px){
+	.ratings{
+		width: auto;
+	}
+	.ratings-wrapper input{
+		width: 97%;
+	}
+	.left-input{
+		margin-left: 8px;
+	}
+	.right-input{
+		padding-left: 40px;
+	}
+	.report p{
+		float: right;
+	}
+}
+@media screen and (min-width: 640px){
+	.right-input{
+		padding-left: 65px;
+	}
+	.ratings{
+		width: 155px;
+	}
+	.report p{
+		width: 138px;
+	}
+}
 @media screen and (min-width: 768px){
+	.top-row ul li{
+		margin-bottom: 0;
+	}
 	.profile-menu{
 		padding: 0;
 		margin-left: 15px;
@@ -205,17 +291,45 @@
 	}
 	.versus{
 		padding-top: 60px;
+		padding-left: 15px;
 	}
-	.result div:nth-of-type(1){
-		padding-left: 0;
+	.ratings-wrapper{
+		margin-left: 29px;
+	}
+	.ratings-wrapper input{
+		width: 98%;
+	}
+	.left-input{
+		margin-left: 4px;
+	}
+	.right-input{
+		padding-left: 10px;
+	}
+	.ratings{
+		width: auto;
+	}
+	.report p{
+		width: 95px;
 	}
 }
 @media screen and (min-width: 990px){
-	.versus{
-		padding-left: 40px;
+	.ratings-wrapper input{
+		width: 90.5%;
 	}
-	.result div:nth-of-type(1){
-		padding-left: 10px;
+	.left-input{
+		margin-left: -28px;
+	}
+	.right-input{
+		padding-left: 42px;
+	}
+	.ratings-wrapper{
+		margin-left: 2px;
+	}
+	.versus{
+		padding-left: 65px;
+	}
+	.report p{
+		width: 125px;
 	}
 }
 @media screen and (min-width: 1024px){
@@ -247,18 +361,19 @@
 	.profile-views{
 		width: 31.333333%;
 	}
-	.versus{
-		padding-left: 25px;
-	}
 	.bottom-main{
 		padding: 0 50px;
 	}
-	.result div:nth-of-type(1){
-		padding-left: 0;
+	.ratings-wrapper input{
+		width: 88%;
 	}
-	.result div.ratings{
-		padding-left: 15px;
-		padding-right: 7px;
+	.left-input{
+		margin-left: -40px;
 	}
-
+	.right-input{
+		padding-left: 54px;
+	}
+	.ratings-wrapper{
+		margin-left: -2px;
+	}
 }
