--- a/style/games_style.css
+++ b/style/games_style.css
@@ -15,9 +15,12 @@
 .top-row ul li p{
 	height: 100%;
 	padding: 15px 0 0 5px;
-	background: #929292;
 	font-size: 12px;
-	font-weight: bold;	
+	font-weight: bold;
+	background: #f4f4f4;
+}
+.top-row ul li.locked p{
+	background: #929292;
 }
 .top-row ul li p span{
 	font-style: italic;
@@ -27,10 +30,7 @@
 	margin: -3px 0 0 0;
 	padding: 0 0 0 5px;
 }
-.top-row .checked p{
-	background: #f4f4f4;
-}
-.top-row .checked p:nth-of-type(1){
+.checked-color{
 	color: #1182f5;
 }
 .middle-row{
@@ -75,14 +75,6 @@
 	padding: 20px 0 10px 0;
 	border-bottom: 1px solid #d8d8d8;
 }
-.left-box{
-}
-.right-box{
-
-}
-.game-box-wrapper{
-
-}
 .game-box-wrapper p{
 	font-style: italic;
 	font-size: 12px;
@@ -90,8 +82,6 @@
 }
 .game-box-wrapper p img{
 	width: 20px;
-}
-.game-box{
 }
 .game-box-bar{
 	width: 120px;
@@ -101,6 +91,13 @@
 }
 .game-box-bar .box-bar-cover{
 	background: #e43f3f;
+}
+.game-box-bar .badge{
+	position: absolute;
+    margin-top: -20px;
+    margin-left: 82px;
+    background: #363636;
+    display: none;
 }
 .game-img{
 	width: 120px;
@@ -133,6 +130,13 @@
 .result p:nth-of-type(2){
 	padding-top: 10px;
 }
+.result label input, .result li input{
+	visibility: hidden;
+	position: absolute;
+}
+.result li img{
+	margin-left: -2.5px;
+}
 .result input{
 	width: 30px;
 	height: 30px;
@@ -140,11 +144,37 @@
 	font-weight: bold;
 	border: none;
 }
+.result-wrapper ul{
+	margin: 0;
+	padding: 0;	
+	display: inline-block;
+}
+.result-wrapper ul li{
+	width: 30px;
+	height: 30px;
+	padding-top: 5px;
+	background: #e43f3f;
+	font-weight: bold;
+	color: #fff;
+	list-style: none;
+	cursor: pointer;
+}
+.result-wrapper li:nth-of-type(1){
+	padding-top: 0;
+	margin-top: 0;
+	display: inline-block;
+}
+.result-wrapper li{
+	margin-top: 10px;
+	display: none;
+}
 .right-input{
+	height: 30px;
 	padding-left: 57px;
 	padding-right: 0;
 }
 .left-input{
+	height: 30px;
 	margin-left: 7px;
 	padding-left: 7px;
 }
@@ -155,18 +185,14 @@
 }
 .ratings div{
 	display: inline-block;
-}
-.ratings label{
-	cursor: pointer;
-}
-.ratings label input{
-	visibility: hidden;
-	position: absolute;
-}
-.ratings img{
+}	
+.ratings label img{
 	width: 30px;
 	height: 30px;
+	position: relative;
+	margin-left: 0;
 	background: #e43f3f;
+	cursor: pointer;
 }
 .ratings-wrapper input{
 	width: 170%;
@@ -193,7 +219,6 @@
 	text-align: center;
 	cursor: pointer;
 }
-
 .players-wrapper div p{
 	width: 120px;
 	margin-top: 3px;
@@ -275,12 +300,21 @@ p.chat-message{
 .new-message{
 	padding-top: 10px
 }
+.new-message input{
+	font-family: 'Open Sans', sans-serif;
+	font-size: 14px;
+	font-weight: bold;
+	font-style: italic;
+}
 .new-message input, .new-message textarea{
 	height: 50px;
 	background: #f4f4f4;
 	border: none;
 	border-radius: 15px;
 	resize: none;
+}
+.right-banner{
+	margin-top: 20px; 
 }
 @media screen and (min-width: 480px){
 	.ratings{
@@ -353,6 +387,9 @@ p.chat-message{
 	}
 	.ratings{
 		width: auto;
+	}
+	.report{
+		margin-top: -40px
 	}
 	.report p{
 		width: 95px;
