--- a/style/games_style.css
+++ b/style/games_style.css
@@ -399,6 +399,9 @@ p.chat-message{
 	.match-info.game-chat{
 		margin-top: -37px; 
 	}
+	.match-info.game-chat p{
+		height: auto;
+	}
 }
 @media screen and (min-width: 990px){
 	.ratings-wrapper input{
@@ -419,7 +422,9 @@ p.chat-message{
 	.report p{
 		width: 125px;
 	}
-
+	.match-info.game-chat p{
+		height: 30px;
+	}
 }
 @media screen and (min-width: 1024px){
 	.profile-menu img{
