ajax content display

--- a/style/basic_style.css
+++ b/style/basic_style.css
@@ -123,7 +123,7 @@ li.social-list img{
  	margin: 5px 0 0;
 }
 .main{
-	background: #fff;
+	background: #fcfcfc;
 	margin-top: 15px;
 	border-top: 3px solid #e43f3f;
 	border-left: 1px solid #d8d8d8;
