--- a/style/games_style.css
+++ b/style/games_style.css
@@ -52,14 +52,16 @@
 	box-shadow: 0 0 0 6px #363636;
 	cursor: pointer;
 }
-.profile-menu div{
+.profile-menu a img{
+	width: 78px;
+	height: 78px;
 	margin: 0 0 7px 0;
 	background: #e43f3f;
 }
-.profile-menu div:nth-child(1){
+.profile-menu a:nth-of-type(1) img{
 	height: 30px;
 }
-.profile-menu .active{
+.profile-menu .active img{
 	background: #363636;
 }
 .match-info{
