--- a/style/ladder_style.css
+++ b/style/ladder_style.css
@@ -1,77 +1,8 @@
-.top-row{
-	margin: -10px 0 0 0; 
-}
-.top-row ul{
-	padding: 0;
-}
-.top-row ul li{
-	height: 50px;
-	padding-left: 0;
-	margin-bottom: 10px;
-	list-style: none;
-	border-left: 3px solid #1182f5;
-	cursor: pointer;
-}
-.top-row ul li.red-border{
-	border-left: 3px solid #e43f3f;
-}
-.top-row ul li p{
-	height: 100%;
-	padding: 15px 0 0 5px;
-	font-size: 12px;
-	font-weight: bold;
-	background: #f4f4f4;
-}
-.top-row ul li.locked p{
-	background: #929292;
-}
-.top-row ul li p span{
-	font-style: italic;
-	font-weight: normal;
-}
-.top-row ul li p img{
-	margin: -3px 0 0 0;
-	padding: 0 0 0 5px;
-}
-.checked-color{
-	color: #1182f5;
-}
-.middle-row{
-	margin: 40px 0;
-}
-.middle-row p{
-	width: 230px;
-	height: 56px;
-	margin: 0 auto; 
-	padding: 12px 0 0 0;
-	background: #363636;
-	font-size: 18px;
-	font-weight: bold;
-	color: #fff;
-	border: 3px solid #fff;
-	box-shadow: 0 0 0 6px #363636;
-	cursor: pointer;
-}
-.bottom-inner-wrapper{
-	padding: 20px 0 10px 0;
-}
-.profile-menu a img{
-	width: 78px;
-	height: 78px;
-	margin: 0 0 7px 0;
-	background: #e43f3f;
-}
-.profile-menu a:nth-of-type(1) img{
-	height: 30px;
-}
-.profile-menu .active img{
-	background: #363636;
-}
 .match-info{
 	background: #363636;
 	margin-bottom: 7px;
 }
-.match-info p, .bottom-main p{
+.match-info p, .ladder-main p{
 	height: 30px;
 	margin: 0;
 	padding-top: 6px;
@@ -79,7 +10,7 @@
 	font-style: italic;
 	color: #fff;
 }
-.bottom-main p {
+.ladder-main p {
 	margin-bottom: 5px;
 	background: #363636;
 }
@@ -136,93 +67,6 @@
 .ladder-box table tr td:nth-of-type(even){
 	width: 20px;
 }
-.game-chat{
-	float: right;
-	padding: 0;
-}
-.game-chat-inner{
-	height: 500px;
-	overflow-y: scroll;	
-}
-.game-chat-inner ul{
-	list-style: none;
-	padding: 0;
-}
-.match-info.game-chat{
-	margin-left: 0;
-	background: none;
-}
-.match-info.game-chat p{
-	margin: 0 15px;
-	background: #363636;
-}
-.game-chat h5{
-	height: 32px;
-	margin: 0;
-	padding: 10px 5px;
-	background: #363636;
-	font-family: 'Open Sans', sans-serif;
-	font-size: 12px;
-	font-style: italic;
-	color: #fff;
-}
-.game-chat h6{
-	font-family: 'Open Sans', sans-serif;
-	font-size: 12px;
-	font-style: italic;
-	color: #d8d8d8;
-}
-.game-chat p{
-	padding: 5px 0;
-	margin: 0;
-	border-bottom: 1px solid #d8d8d8;
-	font-size: 12px;
-	font-style: italic;
-}
-
-.game-chat span{
-	padding-top: 20px;
-}
-.game-chat p img{
-	width: 39px;
-	margin: 0 5px 0 0;
-	border: 2px solid #363636; 
-}
-.online-player{
-	color: #1182f5;
-}
-.online-player span{
-	color: #333;
-}
-.game-chat .online-player img{
-	border: 2px solid #1182f5;
-}
-p.chat-message{
-	margin: 10px 0;
-	padding: 15px 10px;
-	background: #f4f4f4;
-	border-radius: 15px;
-	border-bottom: none;
-}
-.new-message{
-	padding-top: 10px
-}
-.new-message input{
-	font-family: 'Open Sans', sans-serif;
-	font-size: 14px;
-	font-weight: bold;
-	font-style: italic;
-}
-.new-message input, .new-message textarea{
-	height: 50px;
-	background: #f4f4f4;
-	border: none;
-	border-radius: 15px;
-	resize: none;
-}
-.right-banner{
-	margin-top: 20px; 
-}
 @media screen and (min-width: 480px){
 	.ladder-box table{
 		width: 70%;
@@ -234,67 +78,37 @@ p.chat-message{
 	}
 }
 @media screen and (min-width: 768px){
-	.top-row ul li{
-		margin-bottom: 0;
-	}
-	.profile-menu{
-		padding: 0;
-		margin-left: 15px;
-	}
 	.match-info{
 		margin-left: 7px;
 	}
-	.profile-menu img{
-		margin-left: -8px;
-	}
-	.bottom-main{
+	.ladder-main{
 		margin-left: 7px;
 		border-left: 1px solid #d8d8d8;
 		border-right: 1px solid #d8d8d8; 
 	}
-	.bottom-main p:nth-of-type(1){
+	.ladder-main p:nth-of-type(1){
 		margin-top: -37px;
 	}
-	.bottom-main p:nth-of-type(3){
+	.ladder-main p:nth-of-type(3){
 		margin-top: -35px;
 	}
 	.ladder-box table{
 		width: 100%;
 	}
-	.game-chat{
-		width: 29.333333%;
-	}
-	.match-info.game-chat{
-		margin-top: -37px; 
-	}
-	.match-info.game-chat p{
-		height: auto;
-	}
-}
-@media screen and (min-width: 990px){
-	.match-info.game-chat p{
-		height: 30px;
-	}
 }
 @media screen and (min-width: 1024px){
-	.profile-menu img{
-		margin-left: 0;
-	}
 	.ladder-box table{
 		width: 90%;
 	}
 }
 @media screen and (min-width: 1200px){
-	.game-chat{
-		width: 31.333333%;
-	}
-	.bottom-main{
+	.ladder-main{
 		padding: 0 50px;
 	}
-	.bottom-main p:nth-of-type(2){
+	.ladder-main p:nth-of-type(2){
 		margin-top: -37px;
 	}
-	.bottom-main p:nth-of-type(3){
+	.ladder-main p:nth-of-type(3){
 		margin-top: -37px;
 	}
 	.ladder-box table{
