--- a/style/rules_style.css
+++ b/style/rules_style.css
@@ -1,7 +1,7 @@
 .rules-inner-wrapper{
 	padding: 0 0 10px 0;
 }
-.text-box{
+.rules-text-box{
 	margin-bottom: 5px;
 	background: #f4f4f4;
 	border-left: 3px solid #e43f3f;
