--- a/style/games_style.css
+++ b/style/games_style.css
@@ -175,13 +175,13 @@
 }
 .right-input{
 	height: 30px;
-	padding-left: 57px;
+	padding-left: 83px;
 	padding-right: 0;
 }
 .left-input{
 	height: 30px;
-	margin-left: 7px;
-	padding-left: 7px;
+	margin-left: 0;
+	padding-left: 0;
 }
 .ratings{
 	height: 30px;
@@ -329,6 +329,7 @@ p.chat-message{
 	}
 	.left-input{
 		margin-left: 8px;
+		padding-left: 7px;
 	}
 	.right-input{
 		padding-left: 40px;
