--- a/style/support_style.css
+++ b/style/support_style.css
@@ -23,13 +23,13 @@
 	padding: 0;
 }
 .topic-wrapper ul{
-	margin: 0;
-	padding: 0 0 210px 0;	
+	margin: 0 0 210px 0;
+	padding: 0;	
 	display: inline-block;
 	z-index: 50;
 }
 .topic-wrapper ul:hover{
-	padding: 0 0 75px 0;
+	margin: 0 0 75px 0;
 }
 .topic-wrapper ul li{
 	height: 35px;
@@ -64,7 +64,7 @@
     border: none;
 }
 .topic-wrapper .text-holder{
-	margin: 50px 0 0 0;
+	margin: 63px 0 0 0;
 	padding: 0;
 	position: absolute;
     font-style: italic;
