--- a/style/games_style.css
+++ b/style/games_style.css
@@ -309,6 +309,7 @@ p.chat-message{
 	font-size: 14px;
 	font-weight: bold;
 	font-style: italic;
+	padding-left: 10px;
 }
 .new-message input, .new-message textarea{
 	height: 50px;
