--- a/style/games_style.css
+++ b/style/games_style.css
@@ -12,6 +12,9 @@
 	border-left: 3px solid #1182f5;
 	cursor: pointer;
 }
+.top-row ul li.checked:hover{
+	color: #1182f5;
+}
 .top-row ul li.red-border{
 	border-left: 3px solid #e43f3f;
 }
@@ -32,9 +35,6 @@
 .top-row ul li p img{
 	margin: -3px 0 0 0;
 	padding: 0 0 0 5px;
-}
-.checked-color{
-	color: #1182f5;
 }
 .middle-row{
 	margin: 40px 0;
@@ -295,7 +295,7 @@
 	border: 2px solid #1182f5;
 }
 p.chat-message{
-	margin: 10px 0;
+	margin: 5px 0;
 	padding: 15px 10px;
 	background: #f4f4f4;
 	border-radius: 15px;
