--- a/style/games_style.css
+++ b/style/games_style.css
@@ -87,6 +87,9 @@
 .bottom-inner-wrapper{
 	padding: 20px 0 10px 0;
 }
+.left-buffer{
+	margin-left: 15px;
+}
 .game-box-wrapper p{
 	font-style: italic;
 	font-size: 12px;
@@ -123,7 +126,7 @@
 	opacity: 0.5;
 }
 .game-box:hover p, .players-wrapper div div:hover p{
-	background: #1182F5;
+	background: #e43f3f;
 }
 .players-wrapper div, .game-box{
 	cursor: pointer;
@@ -139,7 +142,7 @@
 	font-style: italic;
 }
 .versus{
-	padding-left: 65px;
+	padding-left: 150px;
 }
 .versus span{
 	padding: 0 8px 2px 8px;
@@ -158,7 +161,7 @@
 	font-style: italic;
 }
 .result p:nth-of-type(2){
-	padding-top: 10px;
+	padding-top: 15px;
 }
 .result label input, .result li input{
 	visibility: hidden;
@@ -228,7 +231,7 @@
 	cursor: pointer;
 }
 .ratings-wrapper input{
-	width: 170%;
+	width: 101px;
 	height: 30px;
 	padding-left: 15px;
 	margin-left: 15px;
@@ -247,6 +250,7 @@
 	height: 30px;
 	margin-left: 81px;
 	padding-top: 5px;
+	float: right;
 	background: #363636;
 	color: #fff;
 	text-align: center;
@@ -378,9 +382,6 @@ p.chat-message{
 	.right-input{
 		padding-left: 40px;
 	}
-	.report p{
-		float: right;
-	}
 }
 @media screen and (min-width: 640px){
 	.right-input{
@@ -426,7 +427,7 @@ p.chat-message{
 	}
 	.versus{
 		padding-top: 60px;
-		padding-left: 15px;
+		padding-left: 10px;
 	}
 	.ratings-wrapper{
 		margin-left: 29px;
